# tekla_mcp_server

./: .env.example  .gitignore  .pylintrc  AGENTS.md  CLAUDE.md  README.md  attribute_mapper.py  component_props_mapper.py  embeddings.py  init.py  mcp_server.py  models.py  pyproject.toml  requirements-dev.txt  requirements.txt  tekla_loader.py  tekla_mcp.py  tekla_utils.py  template_attrs_parser.py  tools.py  utils.py
.github/workflows/: code-quality.yml  python-tests.yml
config/: base_components.sample.json  element_types.sample.json  lifting_anchor_types.sample.json  precast_element_types.sample.json  report_properties.sample.json  semantic_overrides.sample.json  settings.sample.json
config/attributes/: TEKLA_MCP_DXF_EXPORT.dwgsetting  TEKLA_MCP_EXPORT_BASE.dwgsetting  TEKLA_MCP_PDF_BASE.PdfPrintOptions.xml
config/context/: 000_GENERAL.md
config/requirements/: 000_GENERAL.md
docs/: compatibility.md  configuration.md  distribution.md  index.md  quickstart.md  reference.md  testing.md
src/tekla_mcp_server/: config.py  drawing_export.py  dxf_operations.py  embeddings.py  init.py  mcp_server.py  mcp_tools.py  models.py  tekla_loader.py  tekla_utils.py  template_attrs_parser.py  tools.py  utils.py
tests/: test_init.py  test_mcp_server.py  test_models.py  test_tekla_mcp.py  test_tekla_utils.py  test_utils.py
tests/functional/: conftest.py  test_components.py  test_drawings.py  test_ifc.py  test_mcp_server.py  test_modeling.py  test_operations.py  test_properties.py  test_selection.py  test_view.py
tests/unit/: test_attribute_mapper.py  test_config.py  (+22 more)
(+47 files in other folders)
