[project]
name = "tekla-mcp-server"
version = "0.1.0"
requires-python = ">=3.11"

[tool.ruff]
line-length = 200

[tool.ruff.lint]
ignore = ["E402"]

[tool.mypy]
explicit_package_bases = true
ignore_missing_imports = true

[tool.pytest]
minversion = "9.0"
addopts = ["-ra"]
pythonpath = ["."]
testpaths = [
    "tests",
]
